--- a/pom.xml
+++ b/pom.xml
@@ -1,111 +1,120 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
+	<parent>
 
-        <groupId>org.springframework.boot</groupId>
+		<groupId>org.springframework.boot</groupId>
 
-        <artifactId>spring-boot-starter-parent</artifactId>
+		<artifactId>spring-boot-starter-parent</artifactId>
 
-        <version>2.1.6.RELEASE</version>
+		<version>2.1.6.RELEASE</version>
 
-        <relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 
-    </parent>
+	</parent>
 
-    <groupId>com.okta.examples.jpa</groupId>
+	<groupId>com.okta.examples.jpa</groupId>
 
-    <artifactId>demo</artifactId>
+	<artifactId>demo</artifactId>
 
-    <version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 
-    <name>BeyondAuthentication</name>
+	<name>BeyondAuthentication</name>
 
-    <description>Demo project for Spring Boot</description>
+	<description>Demo project for Spring Boot</description>
 
-    <properties>
+	<properties>
 
-        <java.version>1.8</java.version>
+		<java.version>1.8</java.version>
 
-    </properties>
+	</properties>
 
-    <dependencies>
+	<dependencies>
 
-        <dependency>
+		<dependency>
 
-            <groupId>org.springframework.boot</groupId>
+			<groupId>org.springframework.boot</groupId>
 
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 
-        </dependency>
+		</dependency>
 
-        <dependency>
+		<dependency>
 
-            <groupId>org.springframework.boot</groupId>
+			<groupId>org.springframework.boot</groupId>
 
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 
-        </dependency>
+		</dependency>
 
-        <dependency>
+		<dependency>
 
-            <groupId>org.springframework.boot</groupId>
+			<groupId>org.springframework.boot</groupId>
 
-            <artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 
-        </dependency>
+		</dependency>
 
-        <dependency>
+		<dependency>
 
-            <groupId>com.okta.spring</groupId>
+			<groupId>com.okta.spring</groupId>
 
-            <artifactId>okta-spring-boot-starter</artifactId>
+			<artifactId>okta-spring-boot-starter</artifactId>
 
-            <version>1.2.1</version>
+			<version>1.2.1</version>
 
-        </dependency>
+		</dependency>
 
-        <dependency>
+		<dependency>
 
-            <groupId>mysql</groupId>
+			<groupId>mysql</groupId>
 
-            <artifactId>mysql-connector-java</artifactId>
+			<artifactId>mysql-connector-java</artifactId>
 
-            <scope>runtime</scope>
+			<scope>runtime</scope>
 
-        </dependency>
+		</dependency>
 
-        <dependency>
+		<dependency>
 
-            <groupId>org.springframework.boot</groupId>
+			<groupId>org.springframework.boot</groupId>
 
-            <artifactId>spring-boot-starter-test</artifactId>
+			<artifactId>spring-boot-starter-test</artifactId>
 
-            <scope>test</scope>
+			<scope>test</scope>
 
-        </dependency>
+		</dependency>
 
-    </dependencies>
+		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-    <build>
 
-        <plugins>
+	</dependencies>
 
-            <plugin>
+	<build>
 
-                <groupId>org.springframework.boot</groupId>
+		<plugins>
 
-                <artifactId>spring-boot-maven-plugin</artifactId>
+			<plugin>
 
-            </plugin>
+				<groupId>org.springframework.boot</groupId>
 
-        </plugins>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 
-    </build>
+			</plugin>
+
+		</plugins>
+
+	</build>
 
 </project>
