fixing JDBC Timezone error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ okta.oauth2.clientId=0oa12gp7q19JpkhSF4x7
 okta.oauth2.clientSecret=ZlnXgS8V7AkUpSXLK7IupWOm5xJIYiiJhXy5nvu6
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/dbbeyondauthentication
+spring.datasource.url=jdbc:mysql://localhost:3306/dbbeyondauthentication?useUnicode=true&JDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 spring.datasource.username=usrbeyondauthentication
 spring.datasource.password=b.EyondauthenticationCLAU1214
