--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 
 	</properties>
@@ -38,66 +38,26 @@
 	<dependencies>
 
 		<dependency>
-
 			<groupId>org.springframework.boot</groupId>
-
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-
 		</dependency>
-
 		<dependency>
-
-			<groupId>org.springframework.boot</groupId>
-
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-
-		</dependency>
-
-		<dependency>
-
-			<groupId>org.springframework.boot</groupId>
-
-			<artifactId>spring-boot-starter-web</artifactId>
-
-		</dependency>
-
-		<dependency>
-
-			<groupId>com.okta.spring</groupId>
-
-			<artifactId>okta-spring-boot-starter</artifactId>
-
-			<version>1.2.1</version>
-
-		</dependency>
-
-		<dependency>
-
 			<groupId>mysql</groupId>
-
 			<artifactId>mysql-connector-java</artifactId>
-
-			<scope>runtime</scope>
-
 		</dependency>
-
 		<dependency>
-
 			<groupId>org.springframework.boot</groupId>
-
-			<artifactId>spring-boot-starter-test</artifactId>
-
-			<scope>test</scope>
-
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<scope>test</scope>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>com.okta.spring</groupId>
+			<artifactId>okta-spring-boot-starter</artifactId>
+			<version>1.2.1</version>
+		</dependency>
 
 	</dependencies>
 
